# triad-ecosystem

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  Research.md  __init__.py  __init__.py.txt  __main__.py  analytics.py  base_agent.py  black_agent.py  blue_agent.py  ci.yml  coevolution.py  conftest.py  crypto.py  decision_engine.py  docker-compose.yml  evolution.example.yaml  fitness.py  genesis.sh  hashing.py  health.py  logger.py  map_elites.py  meta_memory.py  novelty.py  orchestrator.py  parameters.py  publish.yml  pyproject.toml  quick_start.sh  red_agent.py  replicator.py  reporting.py  requirements-dev.txt  requirements.txt  run.py  (+6 more)
