[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triad-ecosystem"
version = "2.0.0"
description = "Self-evolving autonomous cyber ecosystem with Black-Red-Blue agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Z3R0", email = "z3r0@triad.ecosystem"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "async-timeout>=4.0.3",
    "lz4>=4.3.3",
    "msgpack>=1.0.7",
    "redis>=5.0.1",
    "cryptography>=42.0.5",
    "pyyaml>=6.0.1",
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "psutil>=5.9.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
dashboard = [
    "plotly>=5.18.0",
    "aiohttp>=3.9.3",
    "websockets>=12.0",
]

[project.scripts]
triad = "orchestrator:main"
triad-dashboard = "visualization.server:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", "src/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
]
